--- a/app/src/main/res/layout/activity_tela_editar.xml
+++ b/app/src/main/res/layout/activity_tela_editar.xml
@@ -63,7 +63,7 @@
                 android:ems="10"
                 android:fontFamily="sans-serif-medium"
                 android:hint="@string/txt_dig_preco"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:textSize="24sp" />
 
             <TextView
@@ -110,6 +110,7 @@
                 android:id="@+id/btn_editar"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
+                android:layout_marginBottom="20dp"
                 android:backgroundTint="#56CF4D"
                 android:onClick="editarProduto"
                 android:text="@string/btn_editar"
@@ -121,9 +122,22 @@
                 android:id="@+id/btn_deletar"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
+                android:layout_marginBottom="20dp"
                 android:backgroundTint="#BD0521"
                 android:onClick="deletarProduto"
                 android:text="@string/btn_deletar"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btn_voltar"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginBottom="20dp"
+                android:backgroundTint="@color/purple_500"
+                android:onClick="voltaTela"
+                android:text="@string/btn_voltar"
                 android:textColor="#FFFFFF"
                 android:textSize="30sp"
                 android:textStyle="bold" />
