--- a/app/src/main/res/layout/activity_tela_editar.xml
+++ b/app/src/main/res/layout/activity_tela_editar.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="40dp"
                 android:fontFamily="sans-serif-medium"
-                android:text="@string/bnt_editarProduto"
+                android:text="@string/titulo_tela_editarProduto"
                 android:textAlignment="center"
                 android:textSize="34sp"
                 android:textStyle="bold" />
@@ -107,7 +107,7 @@
                 android:textSize="24sp" />
 
             <Button
-                android:id="@+id/btn_editar"
+                android:id="@+id/btn_salvar"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginBottom="20dp"
