--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,23 @@
             style="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="10dp"
             android:backgroundTint="#56CF4D"
             android:onClick="abrirTelaCriar"
             android:text="@string/btn_criarProduto"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btn_sair"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginBottom="40dp"
+            android:backgroundTint="@color/purple_500"
+            android:onClick="abrirTelaCriar"
+            android:text="@string/btn_sair"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
             android:textStyle="bold" />
