--- a/app/src/main/res/layout/activity_tela_criar.xml
+++ b/app/src/main/res/layout/activity_tela_criar.xml
@@ -107,7 +107,7 @@
                 android:textSize="24sp" />
 
             <Button
-                android:id="@+id/btn_salvar"
+                android:id="@+id/btn_confirmar"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginBottom="20dp"
@@ -118,7 +118,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/btn_voltar2"
+                android:id="@+id/btn_buscar"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginBottom="20dp"
