--- a/app/src/main/res/layout/activity_tela_editar.xml
+++ b/app/src/main/res/layout/activity_tela_editar.xml
@@ -107,7 +107,7 @@
                 android:textSize="24sp" />
 
             <Button
-                android:id="@+id/btn_salvar"
+                android:id="@+id/btn_confirmar"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginBottom="20dp"
