Finaliza a criação da tela de saida

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:layout_height="70dp"
             android:layout_marginBottom="40dp"
             android:backgroundTint="@color/purple_500"
-            android:onClick="abrirTelaCriar"
+            android:onClick="abrirTelaSaida"
             android:text="@string/btn_sair"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
