Resolve bugs de navegação, duplicação de estoque baixo na pesquisa

--- a/app/src/main/res/layout/activity_tela_saida.xml
+++ b/app/src/main/res/layout/activity_tela_saida.xml
@@ -185,7 +185,8 @@
                 android:id="@+id/lista_saida"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:layout_marginBottom="20dp">
+                android:layout_marginBottom="20dp"
+                android:nestedScrollingEnabled="true">
 
             </ListView>
 
