--- a/app/src/main/res/layout/activity_tela_saida.xml
+++ b/app/src/main/res/layout/activity_tela_saida.xml
@@ -170,7 +170,7 @@
 
                 <Button
                     android:id="@+id/btn_buscar"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="70dp"
                     android:layout_marginBottom="20dp"
                     android:backgroundTint="@color/purple_500"
